--- a/client/src/app/pooh/pooh.component.html
+++ b/client/src/app/pooh/pooh.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <h1 id="title">Winnie The Pooh</h1>
-    <p> ******  rule of the game?  ******** more stuffs Lorem Ipsum has been the industry's standard dummy text
+    <p> ****** rule of the game? ******** more stuffs Lorem Ipsum has been the industry's standard dummy text
         ever since the 1500s, when an unknown printer took a galley of type
         and scrambled it to make a type specimen book. It has survived not
         only five centuries, but also the leap into electronic typesetting,
@@ -13,60 +13,89 @@
     <img src="./../../assets/images/youAreHere.png" alt="here" id="playerIcon">
     <div class="gameBoard">
         <div class="row">
-            <div class="col invisible">Empty</div>
-            <div class="col">Eyore
+            <div class="col invisible">
+                <!-- Empty -->
+            </div>
+            <div class="col">
+                <!-- Eyore -->
                 <img src="./../../assets/images/characters/eyore.jpg" alt="eyore" class="char">
-                </div>
-            <div class="col">Hefalump
+            </div>
+            <div class="col">
+                <!-- Hefalump -->
                 <img src="./../../assets/images/characters/heffalump.png" alt="Hefalump" class="char">
             </div>
-            <div class="col invisible">Empty</div>
+            <div class="col invisible">
+                <!-- Empty -->
+            </div>
         </div>
         <div class="row">
-            <div class="col invisible ">Empty</div>
-            <div class="col">Kanga
+            <div class="col invisible ">
+                <!-- Empty -->
+            </div>
+            <div class="col">
+                <!-- Kanga -->
                 <img src="./../../assets/images/characters/kangaAndRoo.jfif" alt="Kanga" class="char">
             </div>
-            <div class="col invisible ">Empty</div>
-            <div class="col invisible ">Empty</div>
+            <div class="col invisible ">
+                <!-- Empty -->
+            </div>
+            <div class="col invisible ">
+                <!-- Empty -->
+            </div>
         </div>
         <div class="row">
-            <div class="col ">Owl
+            <div class="col ">
+                <!-- Owl -->
                 <img src="./../../assets/images/characters/owl" alt="owl" class="char">
             </div>
-            <div class="col ">Christopher Robin
+            <div class="col ">
+                <!-- Christopher Robin -->
                 <img src="./../../assets/images/characters/chris.gif" alt="Christopher Robin" class="char">
             </div>
-            <div class="col ">Rabbit
+            <div class="col ">
+                <!-- Rabbit -->
                 <img src="./../../assets/images/characters/rabbit.png" alt="Rabbit" class="char">
             </div>
-            <div class="col ">Beaver
+            <div class="col ">
+                <!-- Beaver -->
                 <img src="./../../assets/images/characters/" alt="Beaver" class="char">
             </div>
         </div>
         <div class="row">
-            <div class="col ">Piglet
+            <div class="col ">
+                <!-- Piglet -->
                 <img src="./../../assets/images/characters/piglet.png" alt="Piglet" class="char">
             </div>
-            <div class="col ">Winnie the Pooh</div>
-            <div class="col ">Bees
+            <div class="col ">
+                <!-- Winnie the Pooh -->
+            </div>
+            <div class="col ">
+                <!-- Bees -->
                 <img src="./../../assets/images/characters/bees.gif" alt="Bees" class="char">
             </div>
-            <div class="col invisible ">Empty</div>
+            <div class="col invisible ">
+                <!-- Empty -->
+            </div>
         </div>
         <div class="row">
-            <div class="col invisible ">Empty</div>
-            <div class="col ">Tigger
+            <div class="col invisible ">
+                <!-- Empty -->
+            </div>
+            <div class="col ">
+                <!-- Tigger -->
                 <img src="./../../assets/images/characters/tigger.png" alt="Tigger" class="char">
             </div>
-            <div class="col invisible ">Empty</div>
-            <div class="col invisible ">Empty</div>
+            <div class="col invisible ">
+                <!-- Empty -->
+            </div>
+            <div class="col invisible ">
+                <!-- Empty -->
+            </div>
         </div>
+        <img src="./../../assets/images/hundredacrewood.png" alt="Game Map">
     </div>
     <!-- <img src="./../../assets/images/hundredacrewood.png"
         alt="Game Map" class="gameBoard"> -->
-        <img src="./../../assets/images/hundredacrewood.png"
-        alt="Game Map">
     <div class="interactiveParts">
         <div class="players-held-items">
             <h6>Everything you are holding</h6>
@@ -91,14 +120,12 @@
         </div>
         <div class="allButtons">
             <div (click)="moveNorth()" class="row">
-                <div  href="" class="dirButton">North</div>
+                <div href="" class="dirButton">North</div>
             </div>
             <div class="row middleRow">
                 <div (click)="moveEast()" href="" class="dirButton">East</div>
                 <!-- <div class="compass"> -->
-                <img class="compass"
-                    src="./../../assets/images/compass.gif"
-                    alt="compass img">
+                <img class="compass" src="./../../assets/images/compass.gif" alt="compass img">
                 <!-- </div> -->
                 <div (click)="moveWest()" href="" class="dirButton">West</div>
             </div>
